--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <header class="my-5 pb-5 text-center">
                 <h1 class="md:text-6xl text-3xl text-red-400">WebSite de Casa Nova</h1>
                 <h2 class="md:text-3xl text-lg text-gray-600">Tiago e Priscila em busca de construir seu novo lar</h2>
-                <img id="img-priscila-e-tiago" class="m-auto">
+                <video id="priTi_mp4" class="m-auto" autoplay loop muted playsinline></video>
             </header>
 
             <section>
