--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <meta name="author" content="Tiago Evan">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+        <link href="https://fonts.googleapis.com/css2?family=Comfortaa&family=Merienda&family=Montserrat+Alternates&display=swap" rel="stylesheet">
+
         <title>Priscila & Tiago - WebSite de Casa Nova</title>
     </head>
     <body>
