--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Comfortaa&family=Merienda&family=Montserrat+Alternates&display=swap" rel="stylesheet">
 
         <title>Priscila & Tiago - WebSite de Casa Nova</title>
-    </head>
+    <link href="./main.css" rel="stylesheet"></head>
     <body>
         <div class="container">
             <header class="my-5 pb-5 text-center">
