--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="grid grid-cols-1 lg:grid-cols-2 gap-4">
 
                     <div class="flex flex-col">
-                        <img id="casa" class="m-auto">
+                        <img id="casa" class="m-auto" alt="Desenho de Casa">
                     </div>
 
                     <div>
@@ -53,7 +53,7 @@
                         </ul>
                     </div>
                     <div class="flex flex-col">
-                        <img id="ferramentas" class="m-auto">
+                        <img id="ferramentas" class="m-auto" alt="Desenho de ferramentas">
                     </div>
                 </div>
 
@@ -71,7 +71,7 @@
                 <div id="qrcode" class="text-center py-5 my-5 m-auto">
                     <span class="text-sm">Escaneie o QR Code...</span>
                     
-                    <img id="img-qrcode" class="p-5 m-auto my-4 border rounded-lg bg-white">
+                    <img id="img-qrcode" class="p-5 m-auto my-4 border rounded-lg bg-white" alt="QR Code">
                     
                     <a class="hover:text-red-800 text-red-500 underline text-sm" href="https://picpay.me/tiago.evangelista.pinto">
                         <span class="text-sm">ou clique aqui</span>
