--- a/index.html
+++ b/index.html
@@ -1,76 +1,1 @@
-<!doctype html><html><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Tetris.js</title><link rel="icon" href="./resources/block.png"><style>html, body {
-			margin: 0;
-			padding: 0;
-			height: 100%;
-			width: 100%;
-			font-family: "DigitalDisplay";
-			text-align: center;
-			background-color: #c9c9c9;
-		}
-
-		canvas {
-			vertical-align: top;
-			border: #1f1f1f solid 2px;
-		}
-
-		h1, h2 {
-			font-size: 20px;
-			margin: 0;
-		}
-
-		#bg {
-			display: flex;
-			align-items: flex-start;
-			height: 100%;
-			width: 800px;
-			margin: auto;
-			image-rendering: pixelated;
-		}
-
-		#wrapper {
-			top: 80px;
-			width: 800px;
-			position: relative;
-			display: flex;
-			flex-direction: column;
-			align-items: center;
-		}
-
-		#phaser-game {
-			top: -200px;
-			background-color: #89a25a;
-			padding: 4px;
-			display: flex;
-			flex-direction: row-reverse;
-			border: #121212 solid 8px;
-			border-bottom: grey solid 8px;
-			border-right: grey solid 8px;
-		}
-
-		#game-hud {
-			width: 100px;
-			padding-left: 10px;
-			padding-right: 10px;
-			text-align: center;
-		}
-
-		#buttons {
-			width: 350px;
-			margin-top: 120px;
-			display: flex;
-			justify-content: space-around;
-			color: white;
-			font-size: 18px;
-		}
-
-		#sound-image {
-			visibility: visible;
-		}
-
-		.button {
-			image-rendering: pixelated;
-			width: 40px;
-			height: 40px;
-			margin-bottom: 10px;
-			cursor: pointer;
-		}</style><script defer="defer" src="./bundle.js"></script></head><body><div id="bg"><div id="wrapper"><div id="phaser-game"><div id="game-hud"><div><h1>SCORE</h1><h2 id="score">000000</h2></div><div><h1>HI-SCORE</h1><h2 id="hi-score">000000</h2></div><div id="img-piece"></div><div><h1>SPEED</h1><h2 id="speed">0</h2></div><div><h1>LEVEL</h1><h2 id="level">0</h2></div><div id="sound-image" style="width: 24px; margin:auto; margin-top: 20px;"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" viewBox="0 0 32 32"><g><path d="M20.4,2.9c-0.3-0.2-0.7-0.1-1,0.1L9.7,10H3c-0.6,0-1,0.4-1,1v10c0,0.6,0.4,1,1,1h6.7l9.7,7.1c0.2,0.1,0.4,0.2,0.6,0.2   c0.2,0,0.3,0,0.5-0.1c0.3-0.2,0.5-0.5,0.5-0.9V3.8C21,3.4,20.8,3,20.4,2.9z"/><path d="M27.1,9.3c-0.4-0.4-1-0.4-1.4,0s-0.4,1,0,1.4C27.2,12.1,28,14,28,16s-0.8,3.9-2.3,5.3c-0.4,0.4-0.4,1,0,1.4   c0.2,0.2,0.5,0.3,0.7,0.3c0.2,0,0.5-0.1,0.7-0.3C29,20.9,30,18.6,30,16S29,11.1,27.1,9.3z"/><path d="M24.7,12.7c-0.4-0.4-1-0.4-1.4,0.1c-0.4,0.4-0.3,1,0.1,1.4c0.5,0.5,0.8,1.2,0.8,1.9s-0.3,1.4-0.8,1.9   c-0.4,0.4-0.4,1-0.1,1.4c0.2,0.2,0.5,0.3,0.7,0.3c0.2,0,0.5-0.1,0.7-0.3c1-0.9,1.5-2.1,1.5-3.3S25.6,13.5,24.7,12.7z"/></g></svg></div><div id="pause-image" style="width: 24px; margin:auto; margin-top: 20px; visibility: hidden;"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" viewBox="0 0 48 48"><path d="M12 38h8V10h-8v28zm16-28v28h8V10h-8z"/><path d="M0 0h48v48H0z" fill="none"/></svg></div></div></div><div id="buttons"><div><div id="mute" class="button"></div>mute</div><div><div id="pause" class="button"></div>pause</div><div><div id="reset" class="button"></div>reset</div><div><div id="about" class="button"></div>about</div></div></div></div></body></html>
+<!doctype html><html lang="pt-BR"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="description" content="Redesign através do framework React - site poalab."/><title>POALAB</title><link href="/static/css/main.58dbebb9.chunk.css" rel="stylesheet"></head><body><noscript>Você precisa habilitar o JavaScript para visualizar este site.</noscript><div id="root"></div><script>!function(e){function r(r){for(var n,a,l=r[0],p=r[1],f=r[2],c=0,s=[];c<l.length;c++)a=l[c],Object.prototype.hasOwnProperty.call(o,a)&&o[a]&&s.push(o[a][0]),o[a]=0;for(n in p)Object.prototype.hasOwnProperty.call(p,n)&&(e[n]=p[n]);for(i&&i(r);s.length;)s.shift()();return u.push.apply(u,f||[]),t()}function t(){for(var e,r=0;r<u.length;r++){for(var t=u[r],n=!0,l=1;l<t.length;l++){var p=t[l];0!==o[p]&&(n=!1)}n&&(u.splice(r--,1),e=a(a.s=t[0]))}return e}var n={},o={1:0},u=[];function a(r){if(n[r])return n[r].exports;var t=n[r]={i:r,l:!1,exports:{}};return e[r].call(t.exports,t,t.exports,a),t.l=!0,t.exports}a.m=e,a.c=n,a.d=function(e,r,t){a.o(e,r)||Object.defineProperty(e,r,{enumerable:!0,get:t})},a.r=function(e){"undefined"!=typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:"Module"}),Object.defineProperty(e,"__esModule",{value:!0})},a.t=function(e,r){if(1&r&&(e=a(e)),8&r)return e;if(4&r&&"object"==typeof e&&e&&e.__esModule)return e;var t=Object.create(null);if(a.r(t),Object.defineProperty(t,"default",{enumerable:!0,value:e}),2&r&&"string"!=typeof e)for(var n in e)a.d(t,n,function(r){return e[r]}.bind(null,n));return t},a.n=function(e){var r=e&&e.__esModule?function(){return e.default}:function(){return e};return a.d(r,"a",r),r},a.o=function(e,r){return Object.prototype.hasOwnProperty.call(e,r)},a.p="/";var l=this["webpackJsonppoalab-react"]=this["webpackJsonppoalab-react"]||[],p=l.push.bind(l);l.push=r,l=l.slice();for(var f=0;f<l.length;f++)r(l[f]);var i=p;t()}([])</script><script src="/static/js/2.8028f755.chunk.js"></script><script src="/static/js/main.40d562a9.chunk.js"></script></body></html>
